# gldemo

./: .clang-tidy  .gitignore  CMakeLists.txt  Readme.md  vcpkg.json
.github/workflows/: cmake.yml
android/: AddQtAndroidApk.cmake  CMakeLists.txt
res/: CMakeLists.txt
res/model/: cube.mtl
shader/: CMakeLists.txt  shader.c
shader/include/: fs1_frag.h  fs_light_frag.h  vert_default_vert.h  vs1_vert.h  vs_light_vert.h
shader/src/: fs1.frag  fs_light.frag  vs1.vert  vs_light.vert
shader/tools/: CMakeLists.txt  shader_converter.cpp
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/UI/camera/: camerasettings.cpp  camerasettings.ui
src/UI/light/: lightsettings.cpp  lightsettings.ui
src/UI/model/: modelsettings.cpp  modelsettings.ui
src/UI/object/: objectsettings.cpp  objectsettings.ui
src/camera/: Camera.cpp  GLCamera.cpp
src/include/UI/camera/: camerasettings.h
src/include/UI/light/: lightsettings.h
src/include/UI/model/: modelsettings.h
src/include/UI/object/: objectsettings.h
src/include/boundingbox/: GLBoundingbox.h
src/include/camera/: Camera.h  GLCamera.h
src/include/common/: common.h
src/include/opengl/: GLModel.h  GLObject.h  GLScene.h  MainGLWindow.h
src/include/types/: GLTypes.h
src/include/utils/: GLLight.h  GLTransform.h  GLUniformBuffer.h
src/opengl/: GLModel.cpp  GLObject.cpp  GLScene.cpp  MainGLWindow.cpp
src/utils/: GLLight.cpp  GLTransform.cpp  GLUniformBuffer.cpp  TinyObjLoader.cpp
test/: CMakeLists.txt
